Make the ast treeview autoscroll when selecting a node that's not  visible