@@ -74,6 +74,19 @@ check_lib_dir() {
   fi
 }
 
+jre_specific_vm_options() {
+  # java_ver is eg "18" for java 1.8, "90" for java 9.0
+  java_ver=$(java -version 2>&1 | sed -n ';s/.* version "\(.*\)\.\(.*\)\..*"/\1\2/p;')
+
+  if [ $java_ver -ge 90 ]
+  then
+    # Opens internal module of javafx to reflection
+    options="--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED"
+
+    echo $options
+  fi
+}
+
 readonly APPNAME="${1}"
 if [ -z "${APPNAME}" ]; then
     usage
@@ -128,4 +141,5 @@ cygwin_paths
 
 java_heapsize_settings
 
-java ${HEAPSIZE} -cp "${classpath}" "${CLASSNAME}" "$@"
+java ${HEAPSIZE} $(jre_specific_vm_options) -cp "${classpath}" "${CLASSNAME}" "$@"
+
